--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "form-data": "^4.0.5",
     "jsonwebtoken": "^9.0.2",
+    "mailgun.js": "^12.4.0",
     "mongoose": "^8.19.2",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
